# trello_card_cli

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml
tests/: cli_test.py  webservice_test.py
trello_card_cli/: __main__.py  cli.py  webservice.py
